--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "homepage": "https://vadodariyakeyur.github.io/github-repo-finder",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .ts,.tsx src",
-    "lint-fix": "prettier --write src/**/*.{ts,tsx}"
+    "lint-fix": "prettier --write src/**/*.{ts,tsx}",
+    "deploy": "yarn build && yarn gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -33,6 +35,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
